[tool.poetry]
name = "bootcamp"
version = "0.1.0"
description = "kristians bootcamp pakke"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cognite-toolkit = "0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
